# compgrapher

./: .gitignore  CONTRIBUTING.md  README.md  cli.py  compare_to_first_employer.py  config.yaml  data_parser.py  floating_bar_graphs.py  graph_generator.py  main.py  pyproject.toml  requirements.txt  visualize_all_employers.py  visualize_dartmouth_original.py
.clinerules/: rules.md
.github/workflows/: ci.yml
input/csv/: sample_table.csv
tests/: __init__.py  conftest.py  test_data_parser.py
